# Atmos-Browser

./: .gitignore  CMakeLists.txt  Doxyfile  MODULE.bazel  README.md  README.txt  cef_paths.gypi
Resources/: chrome_100_percent.pak  chrome_200_percent.pak
Resources/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
bazel/: variables.bzl
extensions/Ublock_lite/uBOLite_2026.510.1607.chromium/_metadata/generated_indexed_rulesets/: _ruleset1  _ruleset10  _ruleset11  _ruleset12  _ruleset13  _ruleset15  _ruleset16  _ruleset17  _ruleset19  _ruleset2  _ruleset23  _ruleset24  _ruleset25  _ruleset27  _ruleset28  _ruleset3  _ruleset30  _ruleset31  _ruleset32  _ruleset33  _ruleset34  _ruleset36  _ruleset37  _ruleset38  _ruleset39  _ruleset4  _ruleset40  _ruleset41  _ruleset43  _ruleset44  _ruleset45  _ruleset46  _ruleset47  _ruleset48  _ruleset5  _ruleset50  _ruleset52  _ruleset53  _ruleset54  _ruleset55  (+4 more)
extensions/Ublock_lite/uBOLite_2026.510.1607.chromium/rulesets/main/: annoyances-overlays.json  nld-0.json  nor-0.json  pol-0.json
extensions/Ublock_lite/uBOLite_2026.510.1607.chromium/rulesets/regex/: rus-0.json
extensions/Ublock_lite/uBOLite_2026.510.1607.chromium/rulesets/scripting/generic/: chn-0.js
extensions/Ublock_lite/uBOLite_2026.510.1607.chromium/rulesets/scripting/procedural/: ublock-filters.json
include/: cef_api_versions.h  cef_pack_strings.h  cef_version.h
tests/cefclient/: CMakeLists.txt
tests/cefclient/browser/: client_browser.cc  main_context_impl.cc  root_window_win.cc
tests/cefclient/resources/: ntp.html
tests/cefclient/win/: cefclient.rc
tests/cefsimple/: BUILD.bazel  CMakeLists.txt  ad_blocker.cpp  ad_blocker.h  filters.txt  lightbrowser_app.cc  lightbrowser_app.h  lightbrowser_handler.cc  lightbrowser_handler.h  lightbrowser_handler_win.cc  lightbrowser_win.cc  resource.h
tests/cefsimple/win/: BUILD.bazel  lightbrowser.rc
